[project]
name = "webcrawler"
version = "0.1.0"
description = "Web Crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "httpx[http2]>=0.28.1",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.0.0", "mypy>=1.8.0"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
